# openapi-test-client

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: test.yml
src/demo_app/: Dockerfile  __init__.py  main.py
src/demo_app/api/: default.py
src/demo_app/api/_hidden/: _hidden.py
src/demo_app/api/_test/: test.py
src/demo_app/api/auth/: auth.py  models.py
src/demo_app/api/user/: models.py  user.py
src/demo_app/handlers/: error_handlers.py  request_handlers.py
src/demo_app/patch/: patch.py
src/openapi_test_client/: __init__.py
src/openapi_test_client/cfg/: logging.yaml  urls.json
src/openapi_test_client/clients/: __init__.py  base.py  openapi.py
src/openapi_test_client/clients/demo_app/: __init__.py  demo_app_client.py
src/openapi_test_client/clients/demo_app/api/: __init__.py  _test.py  auth.py  users.py
src/openapi_test_client/clients/demo_app/api/base/: __init__.py  demo_app_api.py
src/openapi_test_client/clients/demo_app/api/request_hooks/: post_request.py  pre_request.py  request_wrapper.py
src/openapi_test_client/clients/demo_app/models/: users.py
src/openapi_test_client/clients/sample_app/: __init__.py  sample_app_client.py
src/openapi_test_client/clients/sample_app/api/: __init__.py  auth.py  users.py
src/openapi_test_client/clients/sample_app/api/base/: __init__.py  sample_app_api.py
src/openapi_test_client/clients/sample_app/api/request_hooks/: post_request.py  pre_request.py  request_wrapper.py
src/openapi_test_client/clients/sample_app/models/: users.py
src/openapi_test_client/libraries/: __init__.py  api_spec.py  types.py  validation.py
src/openapi_test_client/libraries/api/: __init__.py  api_client_generator.py  api_spec.py  multipart_form_data.py  types.py
src/openapi_test_client/libraries/api/api_classes/: __init__.py  base.py
src/openapi_test_client/libraries/api/api_functions/: decorators.py  endpoints.py  executors.py
src/openapi_test_client/libraries/api/api_functions/utils/: endpoint_function.py  endpoint_model.py  param_model.py  param_type.py  pydantic_model.py
src/openapi_test_client/libraries/base/: __init__.py  api_class.py  api_client.py
src/openapi_test_client/libraries/code_gen/: client_generator.py  code.py  utils.py
src/openapi_test_client/libraries/common/: ansi_colors.py  code.py  constants.py  json_encoder.py  logging.py  misc.py
src/openapi_test_client/libraries/core/: README.md  __init__.py  api_spec.py  constants.py  types.py
src/openapi_test_client/libraries/core/api_classes/: __init__.py  base.py
src/openapi_test_client/libraries/core/base/: __init__.py  api_class.py  api_client.py
src/openapi_test_client/libraries/core/endpoints/: __init__.py  decorators.py  endpoint.py  endpoint_factory.py  endpoint_func.py  endpoint_handler.py  executors.py  stats.py
src/openapi_test_client/libraries/core/endpoints/utils/: endpoint_call.py  (+4 more)
src/openapi_test_client/libraries/core/utils/: endpoint_call.py  endpoint_model.py  param_type.py
src/openapi_test_client/libraries/endpoints/: __init__.py  endpoint.py  endpoint_factory.py  endpoint_factory.pyi  endpoint_func.py  endpoint_handler.py  endpoint_handler.pyi
src/openapi_test_client/libraries/openapi/: __init__.py  api_spec.py  types.py  validation.py
src/openapi_test_client/libraries/openapi/base/: api_class.py  api_client.py
src/openapi_test_client/libraries/openapi/code_gen/: client_generator.py  constants.py  utils.py
src/openapi_test_client/libraries/openapi/endpoints/: __init__.py  endpoint.py  endpoint_func.py
src/openapi_test_client/libraries/openapi/utils/: endpoint_model.py  param_model.py  param_type.py  pydantic_model.py
src/openapi_test_client/libraries/rest_client/: __init__.py  ext.py  hooks.py  rest_client.py  utils.py
src/openapi_test_client/libraries/utils/: endpoint_model.py  modules.py  param_model.py  param_type.py  pydantic_model.py
src/openapi_test_client/scripts/: generate_client.py
src/sample_app/: __init__.py  main.py
src/sample_app/api/auth/: auth.py
src/sample_app/api/user/: user.py
src/sample_app/handlers/: error_handlers.py
tests/: conftest.py  helper.py  test_api_auth.py  test_api_users.py  test_param_model.py  test_script.py
tests/contract/: conftest.py
tests/contract/consumer/: conftest.py  helper.py  test_auth_contract.py  test_user_contract.py
tests/contract/provider/: conftest.py  test_provider_verification.py
tests/integration/: conftest.py  helper.py  test_api_auth.py  test_api_users.py  test_custom_api_func_logic.py  test_raw_options.py  test_script.py
tests/integration/async/: conftest.py  test_async_client.py  test_async_def.py
tests/unit/: conftest.py  test_api_spec.py  test_code_generation.py  test_endpiont_function.py  test_endpiont_handler.py  test_endpoint_model.py  test_multipart_form_data.py  test_param_model.py  test_param_type.py  test_pydantic_model.py  test_types.py  test_validation.py
tests/unit/data/: openapi.json
tests/unit/tests_code_gen/: conftest.py  helper.py  test_code_generation.py
tests/unit/tests_code_gen/data/: openapi.json
tests/unit/tests_core/: conftest.py  test_api_class.py  test_api_client.py  test_api_spec.py  test_param_model.py  test_param_type.py  test_pydantic_model.py  test_types.py
tests/unit/tests_core/tests_endpoints/: conftest.py  test_endpoint.py  test_endpoint_factory.py  test_endpoint_func.py  test_endpoint_func_call.py  test_endpoint_handler.py  test_endpoint_stats.py
tests/unit/tests_core/tests_utils/: test_endpoint_call.py  test_endpoint_model.py  test_param_type.py
tests/unit/tests_endpoints/: conftest.py  test_endpoint.py  test_endpoint_factory.py  test_endpoint_func.py  test_endpoint_function.py  test_endpoint_handler.py  test_validate_kwarg.py
tests/unit/tests_openapi/: conftest.py  test_api_spec.py  test_endpoint_model.py  test_param_model.py  test_param_type.py  test_pydantic_model.py  test_types.py  test_validation.py
tests/unit/tests_openapi/tests_endpoints/: conftest.py  test_endpoint.py  test_endpoint_func.py  test_validate_kwarg.py
